--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hero Banner - Scalable on Zoom</title>
     <style>
+      /* Reset and global styles */
       * {
         box-sizing: border-box;
         margin: 0;
@@ -14,62 +15,39 @@
       body {
         font-family: Arial, sans-serif;
         line-height: 1.6;
+        color: #fff;
       }
 
-      .heroBanner {
-        width: 100%;
-        background-color: rgb(233, 233, 233);
-        overflow: hidden;
-      }
-
-      .heroBannerContents {
-        display: grid;
-        grid-template-columns: 1.15fr 0.85fr;
-        align-items: center;
-      }
-
-      .contents {
-        padding: 5vh 5vw;
-      }
-
-      .imageContainer {
-        width: 100%;
-        height: 100%; /* fills column height */
-      }
-
-      .imageContainer img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        object-position: center;
+      h1,
+      h2,
+      p {
+        margin-bottom: 1rem;
       }
 
       h1 {
         font-size: 2.5rem;
-        margin-bottom: 1rem;
-        color: #2c3e50;
       }
 
       h2 {
         font-size: 1.8rem;
-        margin-bottom: 1.5rem;
-        color: #7f8c8d;
+        color: #42c3dc;
         font-weight: normal;
+        margin-bottom: 1.5rem;
       }
 
       p {
-        margin-bottom: 2rem;
         font-size: 1.1rem;
-        color: #34495e;
+        margin-bottom: 2rem;
       }
 
       button {
-        background-color: #3498db;
-        color: white;
+        background-color: #42c3dc;
+        color: #130d29;
+        font-weight: 700;
         border: none;
+        border-radius: 4px;
         padding: 12px 24px;
         font-size: 1rem;
-        border-radius: 4px;
         cursor: pointer;
         transition: background-color 0.3s;
       }
@@ -78,25 +56,63 @@
         background-color: #2980b9;
       }
 
+      /* Hero Banner */
+      .heroBanner {
+        width: 100%;
+        background-color: #130d29;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+      }
+
+      .heroBannerContents {
+        display: grid;
+        grid-template-columns: 1.15fr 0.85fr;
+        align-items: center;
+        max-width: 1400px;
+        width: 100%;
+      }
+
+      .contents {
+        padding: 64px;
+      }
+
+      .imageContainer {
+        position: relative;
+        width: 100%;
+        height: 100%;
+      }
+
+      .backgroundImage {
+        position: absolute;
+        width: 50vw;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+        background: url("https://images.unsplash.com/photo-1506973035872-a4ec16b8e8d9?q=80&w=4140&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D")
+          center/cover no-repeat;
+      }
+
       /* Responsive adjustments */
       @media (max-width: 900px) {
         .heroBannerContents {
           grid-template-columns: 1fr;
-          height: auto; /* let it grow naturally */
+          height: auto;
         }
 
         .imageContainer {
-          height: auto; /* adapt to image naturally */
-          order: -1; /* image first */
+          order: 1; /* image comes after content */
+          height: 300px; /* adjust as needed */
+        }
+
+        .backgroundImage {
+          width: 100vw;
         }
 
         .contents {
           padding: 5vh 8vw;
-          text-align: center;
-        }
-
-        p {
-          max-width: 100%;
+          text-align: left;
         }
       }
 
@@ -115,10 +131,8 @@
     <div class="heroBanner">
       <div class="heroBannerContents">
         <div class="contents">
-          <div class="title">
-            <h1>Title goes here</h1>
-            <h2>Subheading</h2>
-          </div>
+          <h1>Title goes here</h1>
+          <h2>Subheading</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
             ut animi distinctio amet, dolorum sunt harum aliquid hic mollitia
@@ -127,10 +141,7 @@
           <button>Check your eligibility</button>
         </div>
         <div class="imageContainer">
-          <img
-            src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=800&q=80"
-            alt="group of mountains"
-          />
+          <div class="backgroundImage"></div>
         </div>
       </div>
     </div>
